force-app/main/default/objects/pse__Assignment__c/fields/ACTIVE_Job_to_Date_Hours__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE_Job_to_Date_Hours__c</fullName>
    <description>Sum of all approved hours logged (active projects).</description>
    <inlineHelpText>Sum of all approved hours logged (active projects).</inlineHelpText>
    <label>ACTIVE_Job to Date (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>