force-app/main/default/objects/pse__Assignment__c/fields/Active_Resource__c.field-meta.xml
<CustomField>
    <fullName>Active_Resource__c</fullName>
    <formula>IF(
pse__Resource__r.pse__Is_Resource_Active__c = 
FALSE, 
FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Resource</label>
    <type>Checkbox</type>
</CustomField>