force-app/main/default/objects/pse__Assignment__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <formula>IF(ACTIVE_Job_to_Date_Hours__c&gt;0,ACTIVE_Job_to_Date_Hours__c/pse__Project__r.ACTIVE_JTD_Billable_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Actual Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>