force-app/main/default/objects/pse__Assignment__c/fields/Assignment_Location__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Location__c</fullName>
    <formula>pse__Project__r.Project_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Location</label>
    <type>Text</type>
</CustomField>