force-app/main/default/objects/pse__Assignment__c/fields/Assignment_Name_Override__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Name_Override__c</fullName>
    <label>Assignment Name Override</label>
    <length>80</length>
    <type>Text</type>
</CustomField>