force-app/main/default/objects/pse__Assignment__c/fields/Assignment_Skills__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Skills__c</fullName>
    <label>Assignment Skills</label>
    <type>TextArea</type>
</CustomField>