force-app/main/default/objects/pse__Assignment__c/fields/Baseline_Budget__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Budget__c</fullName>
    <formula>pse__Bill_Rate__c*pse__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Budget ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>