force-app/main/default/objects/pse__Assignment__c/fields/CLOSED_Job_To_Date_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLOSED_Job_To_Date_Hours__c</fullName>
    <description>Sum of all approved hours logged (closed projects).</description>
    <inlineHelpText>Sum of all approved hours logged (closed projects).</inlineHelpText>
    <label>CLOSED_Job To Date (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>