force-app/main/default/objects/pse__Assignment__c/fields/Confirmed_New__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_New__c</fullName>
    <formula>IF( ISPICKVAL(pse__Project__r.Ops_Staffing_Stage__c, &quot;Fully Staffed&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmed</label>
    <type>Checkbox</type>
</CustomField>