force-app/main/default/objects/pse__Assignment__c/fields/Estimate_at_Complete_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimate_at_Complete_Cost__c</fullName>
    <formula>Estimate_at_Complete_Hours__c* pse__Resource__r.pse__Default_Cost_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate at Complete (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>