force-app/main/default/objects/pse__Assignment__c/fields/Estimate_at_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimate_at_Complete_Hours__c</fullName>
    <formula>Estimate_to_Complete_Hours__c+Job_to_Date_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate at Complete (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>