force-app/main/default/objects/pse__Assignment__c/fields/Estimate_to_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimate_to_Complete_Hours__c</fullName>
    <description>Sum of all forecasted hours (current week forward).</description>
    <inlineHelpText>Sum of all forecasted hours (current week forward).</inlineHelpText>
    <label>Estimate to Complete (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>