force-app/main/default/objects/pse__Assignment__c/fields/EWB_and_Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>EWB_and_Ops_Notes__c</fullName>
    <inlineHelpText>Additional context and skill-set of resources needed on EWB&apos;s.</inlineHelpText>
    <label>EWB and Ops Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>