force-app/main/default/objects/pse__Assignment__c/fields/Fixed_Price_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Revenue__c</fullName>
    <description>ONLY USE FOR FIXED PRICE PROJECTS. Shows what the revenue would be for this Fixed Price project if it was a T&amp;M project. (Suggested Bill Rate x Billable Hours Approved).</description>
    <formula>pse__Suggested_Bill_Rate_Number__c  *  pse__Billable_Hours_In_Financials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ONLY USE FOR FIXED PRICE PROJECTS. Shows what the revenue would be for this Fixed Price project if it was a T&amp;M project. (Suggested Bill Rate x Billable Hours Approved).</inlineHelpText>
    <label>Fixed Price Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>