force-app/main/default/objects/pse__Assignment__c/fields/Gross_rate__c.field-meta.xml
<CustomField>
    <fullName>Gross_rate__c</fullName>
    <description>Non discounted rate</description>
    <inlineHelpText>Non discounted rate</inlineHelpText>
    <label>Gross rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>