force-app/main/default/objects/pse__Assignment__c/fields/Hours_Category__c.field-meta.xml
<CustomField>
    <fullName>Hours_Category__c</fullName>
    <description>Used by ops or resource managers to categorize assignments for reporting purposes.</description>
    <inlineHelpText>Used by ops or resource managers to categorize assignments for reporting purposes.</inlineHelpText>
    <label>Hours Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40 Hour</fullName>
            </value>
            <value>
                <fullName>20 Hour</fullName>
            </value>
            <value>
                <fullName>10 Hour</fullName>
            </value>
            <value>
                <fullName>Yo-Yo</fullName>
            </value>
            <value>
                <fullName>Front Loaded</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>