force-app/main/default/objects/pse__Assignment__c/fields/Job_to_Date_Cost__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Cost__c</fullName>
    <formula>Job_to_Date_Hours__c*pse__Resource__r.pse__Default_Cost_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job to Date (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>