force-app/main/default/objects/pse__Assignment__c/fields/Job_to_Date_Hours__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Hours__c</fullName>
    <formula>CLOSED_Job_To_Date_Hours__c+ACTIVE_Job_to_Date_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job to Date (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>