force-app/main/default/objects/pse__Assignment__c/fields/Project_Planner_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Planner_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Assignment_Name_Override__c)),Assignment_Name_Override__c,
IF(pse__Is_Billable__c = FALSE, 
  pse__Resource__r.psa_report__Resource_Name__c+&quot; &quot;+&quot;Non-bill&quot;+&quot;-&quot;+TEXT(pse__Role__c),
IF(AND(pse__Is_Billable__c = TRUE, WAR__c = TRUE), 
  pse__Resource__r.psa_report__Resource_Name__c + &quot; &quot;+&quot;WAR&quot;+&quot;-&quot;+TEXT(pse__Role__c),
pse__Resource__r.psa_report__Resource_Name__c+&quot;-&quot;+TEXT(pse__Role__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Planner Name</label>
    <type>Text</type>
</CustomField>