force-app/main/default/objects/pse__Assignment__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>Project Type from the project record.</description>
    <formula>TEXT(pse__Project__r.pse__Project_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Type from the project record.</inlineHelpText>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>