force-app/main/default/objects/pse__Assignment__c/fields/pse__Action_Refresh_EVA_Hours_From_Timecards__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Refresh_EVA_Hours_From_Timecards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</description>
    <inlineHelpText>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</inlineHelpText>
    <label>Action: Refresh EVA Hours From Timecards</label>
    <type>Checkbox</type>
</CustomField>