force-app/main/default/objects/pse__Assignment__c/fields/pse__ERP_Absence_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__ERP_Absence_Correlation_Id__c</fullName>
    <description>This records the absence request correlation key used within the erp system.</description>
    <externalId>true</externalId>
    <inlineHelpText>This records the absence request correlation key used within the erp system.</inlineHelpText>
    <label>ERP Absence Correlation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>