force-app/main/default/objects/pse__Assignment__c/fields/pse__Exclude_from_Billing__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</description>
    <inlineHelpText>If this flag is checked, then all of the Assignment&apos;s child Timecard Splits and Expenses will be created with their Exclude from Billing flag checked, which would make them *not* eligible for Billing Generation.  This can be overridden at the child level.</inlineHelpText>
    <label>Exclude from Billing</label>
    <type>Checkbox</type>
</CustomField>