force-app/main/default/objects/pse__Assignment__c/fields/pse__Exclude_from_Planners__c.field-meta.xml
<CustomField>
    <fullName>pse__Exclude_from_Planners__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected, excludes the assignment from the Resource and Project Planners. Any excluded assignments are not included in totals calculations and color coding in Planners.</inlineHelpText>
    <label>Exclude from Planners</label>
    <type>Checkbox</type>
</CustomField>