force-app/main/default/objects/pse__Assignment__c/fields/pse__Hours_to_Days_Rule__c.field-meta.xml
<CustomField>
    <fullName>pse__Hours_to_Days_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies how to convert hours to days for time cards against this assignment</description>
    <inlineHelpText>Specifies how to convert hours to days for time cards against this assignment</inlineHelpText>
    <label>Hours to Days Rule</label>
    <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>