force-app/main/default/objects/pse__Assignment__c/fields/pse__Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</description>
    <inlineHelpText>If an Assignment is associated with a Milestone, Timecards logged for that Assignment will, by default, also be associated with the Milestone on the Assignment at the time.</inlineHelpText>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Milestone__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project__c</valueField>
        </filterItems>
        <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>