force-app/main/default/objects/pse__Assignment__c/fields/pse__Nick_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Nick_Name__c</fullName>
    <description>Field for holding the nick name of the assignment</description>
    <label>Nick Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>