force-app/main/default/objects/pse__Assignment__c/fields/pse__Non_Billable_Expenses_In_Financials__c.field-meta.xml
<CustomField>
    <fullName>pse__Non_Billable_Expenses_In_Financials__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Non-Billable Expenses In Financials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>