force-app/main/default/objects/pse__Assignment__c/fields/pse__Override_RPG_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_RPG_Audit_Notes__c</fullName>
    <description>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
    <inlineHelpText>Audit Notes related to any Overrides for the Region/Practice/Group of the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
    <label>Override RPG Audit Notes</label>
    <type>TextArea</type>
</CustomField>