force-app/main/default/objects/pse__Assignment__c/fields/pse__Override_RPG_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_RPG_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</description>
    <inlineHelpText>If checked, allows Override Regions, Practices, and Groups to be set for the Assignment&apos;s Timecard (Revenue and Cost) and Expense-related Transactions.</inlineHelpText>
    <label>Override RPG Enabled</label>
    <type>Checkbox</type>
</CustomField>