force-app/main/default/objects/pse__Assignment__c/fields/pse__Override_Timecard_Cost_Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Timecard_Cost_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
    <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Cost Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
    <label>Override Timecard Cost Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Override Timecard Cost Region For Assignments</relationshipLabel>
    <relationshipName>Override_TC_CostRegion_For_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>