force-app/main/default/objects/pse__Assignment__c/fields/pse__Override_Timecard_Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Timecard_Revenue_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
    <inlineHelpText>If set, overrides the default Group to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Group Actuals, even if the Project or Resource are in a different Group.</inlineHelpText>
    <label>Override Timecard Revenue Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Override Timecard Revenue Group For Assignments</relationshipLabel>
    <relationshipName>Override_TC_RevGroup_For_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>